Reference tab and processor

--- a/test.html
+++ b/test.html
@@ -14,7 +14,7 @@ tinymce.init({
     plugins: [
          "advlist autolink link image lists charmap print preview hr anchor pagebreak spellchecker",
          "searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime media nonbreaking",
-         "localfile table contextmenu directionality emoticons template paste textcolor sidepanel respec inlines abbreviations navpanel typograf",
+         "localfile table contextmenu directionality emoticons template paste textcolor sidepanel respec inlines abbreviations references navpanel typograf",
          "tabulator"
    ],
    toolbar: "insertfile undo redo | styleselect | bold italic forecolor backcolor| alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | abbr link image | print preview fullpage docproperties", 
