--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@ tinymce.init({
          "localfile table contextmenu directionality emoticons template paste textcolor sidepanel respec inlines abbreviations references navpanel typograf",
          "tabulator"
    ],
-   toolbar: "insertfile undo redo | styleselect | bold italic forecolor backcolor| alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | abbr link image | print preview fullpage docproperties", 
+   toolbar: "insertfile undo redo | styleselect abbreviation | bold italic forecolor backcolor| alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | abbr link image | print preview fullpage docproperties", 
    style_formats: [
         {title: 'Header 1', block: 'h1'},
         {title: 'Header 2', block: 'h2'},
